[package]
name = "async-or"
version = "0.0.1"
edition = "2018"
authors = ["Longlong Yang <longlong.yang@intel.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
tokio = { version = "1.30.0", features = ["full"] }
async-or-impl = { path = "impl", features = ["async"] }
async-or = { path = ".", features = ["async"]}

[dependencies]
async-or-impl = { path = "impl" }

[features]
default = []
async = ["async-or-impl/async"]