[package]
name = "spdmlib_crypto_mbedtls"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdmlib = { path = "../spdmlib", default-features = false}
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.9.8"
zeroize = { version = "1.5.0", features = ["zeroize_derive"]}

[build-dependencies]
cc = { version = "1.0.63", default-features = false }

[dev-dependencies]
ring = { version = "0.16.20" }
log = { version = "0.4.13" }

[features]
default = ["hashed-transcript-data"]
test_with_ring = ["spdmlib/spdm-ring"]
hashed-transcript-data = ["spdmlib/hashed-transcript-data"]
