[package]
name = "tdisp"
license = "BSD-2-Clause-Patent"
version = "0.2.0"
authors = [
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Xiaoyu Lu <xiaoyux.lu@intel.com>",
    "Longlong Yang <longlong.yang@intel.com>"
    ]
edition = "2018"

[dev-dependencies]

[build-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
spin = { version = "0.9.8", optional = true }

[dependencies]
codec = { path = "../codec" }
bitflags = "1.2.1"
spdmlib = { path = "../spdmlib", default-features = false, features = ["spdm-ring"]}
conquer-once = { version = "0.3.2", default-features = false }
spin = { version = "0.9.8" }

[features]
