[package]
name = "fuzzlib"
version = "0.1.0"
authors = ["haowei <weix.hao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = { version = "=0.12.12", optional = true }
spdmlib = { path = "../../spdmlib", default-features = false, features=["spdm-ring"] }
simple_logger = "1.11.0"
log = "0.4.13"
ring = { version = "0.16.20" }
flexi_logger = "0.18.0"
spdmlib-test = { path = "../../test/spdmlib-test" }

[features]
default = ["hashed-transcript-data", "afl"]
hashed-transcript-data = ["spdmlib/hashed-transcript-data"]
mut-auth = ["spdmlib/mut-auth"]
