[package]
name = "spdm-responder-emu"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdm-emu = { path = "../spdm-emu", default-features = false }
spdmlib = { path = "../../spdmlib", default-features = false }
codec = { path = "../../codec" }
executor = { path = "../../executor" }
mctp_transport = { path = "../../mctp_transport" }
pcidoe_transport = { path = "../../pcidoe_transport" }
simple_logger = "1.11.0"
log = "0.4.13"
futures = { version = "0.3", default-features = false }
spin = { version = "0.9.8" }

[features]
mut-auth = ["spdm-emu/mut-auth"]
spdm-ring = ["spdm-emu/spdm-ring"]
spdm-mbedtls = ["spdm-emu/spdm-mbedtls"]
hashed-transcript-data = ["spdm-emu/hashed-transcript-data"]
spdm-mbedtls-hashed-transcript-data = ["spdm-emu/spdm-mbedtls-hashed-transcript-data"]
