[package]
name = "certificate_req"
version = "0.1.0"
authors = ["haowei <weix.hao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzlib = { path = "../../fuzzlib", default-features = false }
log = "0.4.13"
simple_logger = "1.11.0"
afl = { version = "=0.12.12", optional = true }

[features]
default = ["hashed-transcript-data"]
hashed-transcript-data = ["fuzzlib/hashed-transcript-data"]
fuzzlogfile = []
fuzz = ["afl"]
