[package]
name = "encapsulated_request_certificate_req"
version = "0.1.0"
authors = ["Xiaotian Chen <xiaotian.chen@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzlib = { path = "../../fuzzlib", default-features = false }
afl = { version = "=0.12.12", optional = true }
codec = {path= "../../../codec"}

[features]
default = ["hashed-transcript-data", "mut-auth"]
hashed-transcript-data = ["fuzzlib/hashed-transcript-data"]
fuzzlogfile = []
fuzz = ["afl"]
mut-auth = ["fuzzlib/mut-auth"]
